# my-first-game

./: .gitignore  CMakeLists.txt  MyFirstGame.cpp  README.md
Animation/: Animation.h
Geometry/: Pinocchio.h  PixelMatrix.h  Rectangle.h  Shape.h  SpatialShape.h
Model/: Mover.h  Personaj.h  Stone.h  StoneMover.h
System/: InputListener.h  KbInput.h  System.h  TermScreen.cpp  TermScreen.h
